--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 train_data.npy filter=lfs diff=lfs merge=lfs -text
 Embed filter=lfs diff=lfs merge=lfs -text
+test_data.npy filter=lfs diff=lfs merge=lfs -text
